ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_double_const_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 3) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (2) at (1, 4) {};
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (2, 4) {};
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%2] (5) at (1, 5) {};
\node[circle,fill,inner sep=1pt,label=left:\%1] (4) at (2, 5) {};
\node[font=\tiny] (note_0) at (-1.5, 3.5) {Assign(2, 0)};
\node[font=\tiny] (note_1) at (-1.5, 4.5) {Assign(2, 1)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (2);
		\path[->, blue] (0) [bend right] edge  node { } (1);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (4);


                \end{tikzpicture}
            \end{document}
