ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_early_return_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:taut] (16) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(mytestfoo, [0], [0])};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Call(mytestfoo, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:taut] (41) at (5, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (38) at (5, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (35) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (33) at (6, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (32) at (5, 0) { };
\node[font=\tiny] (note_7) at (3.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_8) at (3.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_9) at (3.5, 2.5) {Return([0])};
\node[circle,fill,inner sep=1pt,label=left:taut] (29) at (9, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (26) at (9, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (23) at (9, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (21) at (10, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (9, 0) { };
\node[font=\tiny] (note_4) at (7.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_5) at (7.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_6) at (7.5, 2.5) {Return([1])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (5);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (21) [loop right] edge  node { } (21);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (20) [loop right] edge  node { } (20);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (33) [loop right] edge  node { } (33);
		\path[->, blue] (20) [bend right] edge  node { } (23);
		\path[->, blue] (32) [loop right] edge  node { } (32);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (20) [bend right] edge  node { } (26);
		\path[->, blue] (32) [bend right] edge  node { } (35);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (20) [bend right] edge  node { } (29);
		\path[->, blue] (32) [bend right] edge  node { } (38);
		\path[->, blue] (32) [bend right] edge  node { } (41);


                \end{tikzpicture}
            \end{document}
