ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_if_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (21) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (17) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (5) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Conditional(1, [0])};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Const(1, 2.0)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Const(2, 3.0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (4);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->] (4) edge (9);
		\path[->, blue] (4) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (4) [bend right] edge  node { } (1);
		\path[->, blue] (4) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (4) [bend right] edge  node { } (5);
		\path[->, blue] (4) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (4) [bend right] edge  node { } (21);
		\path[->, blue] (0) [bend right] edge  node { } (20);


                \end{tikzpicture}
            \end{document}
