ide/src/tests/icfg/snapshots/ide__tests__icfg__convert2__test_ir_loop_dot.snap
---
source: src/tests/icfg/convert2.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (4) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (1) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Jump(0)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->] (0) edge (3);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->] (3) edge (7);
		\path[->, blue] (3) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (3) [bend right] edge  node { } (1);
		\path[->, blue] (3) [bend right] edge  node { } (4);
		\path[->] (0) edge (3);
		\path[->] (3) edge (6);
		\path[->] (3) edge (6);
		\path[->, bend right] (7) edge (1);
		\path[->, bend right] (7) edge (1);
		\path[->, bend right] (6) edge (0);
		\path[->] (1) edge (4);


                \end{tikzpicture}
            \end{document}
